--- a/public/prelanding.html
+++ b/public/prelanding.html
@@ -120,7 +120,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#2563eb" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M22 2L9 15 2 8l-1 1 8 8 14-14-1-1z"/>
         </svg>
-        <span>🔒 Métodos seguros y discretos</span>
+        <span>🔒 Métodos seguros y garantizados</span>
       </li>
     </ul>
    <a href="/?acceso=true" class="btn">Entrar Ahora</a>
